; ModuleID = '/home/carl/AnghaBench/mruby/src/extr_vm.c_top_proc.c'
source_filename = "/home/carl/AnghaBench/mruby/src/extr_vm.c_top_proc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.RProc = type { %struct.RProc* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.RProc* (i32*, %struct.RProc*)* @top_proc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.RProc* @top_proc(i32* %0, %struct.RProc* %1) #0 {
  %3 = alloca %struct.RProc*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.RProc*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.RProc* %1, %struct.RProc** %5, align 8
  br label %6

6:                                                ; preds = %21, %2
  %7 = load %struct.RProc*, %struct.RProc** %5, align 8
  %8 = getelementptr inbounds %struct.RProc, %struct.RProc* %7, i32 0, i32 0
  %9 = load %struct.RProc*, %struct.RProc** %8, align 8
  %10 = icmp ne %struct.RProc* %9, null
  br i1 %10, label %11, label %25

11:                                               ; preds = %6
  %12 = load %struct.RProc*, %struct.RProc** %5, align 8
  %13 = call i64 @MRB_PROC_SCOPE_P(%struct.RProc* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %19, label %15

15:                                               ; preds = %11
  %16 = load %struct.RProc*, %struct.RProc** %5, align 8
  %17 = call i64 @MRB_PROC_STRICT_P(%struct.RProc* %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %15, %11
  %20 = load %struct.RProc*, %struct.RProc** %5, align 8
  store %struct.RProc* %20, %struct.RProc** %3, align 8
  br label %27

21:                                               ; preds = %15
  %22 = load %struct.RProc*, %struct.RProc** %5, align 8
  %23 = getelementptr inbounds %struct.RProc, %struct.RProc* %22, i32 0, i32 0
  %24 = load %struct.RProc*, %struct.RProc** %23, align 8
  store %struct.RProc* %24, %struct.RProc** %5, align 8
  br label %6

25:                                               ; preds = %6
  %26 = load %struct.RProc*, %struct.RProc** %5, align 8
  store %struct.RProc* %26, %struct.RProc** %3, align 8
  br label %27

27:                                               ; preds = %25, %19
  %28 = load %struct.RProc*, %struct.RProc** %3, align 8
  ret %struct.RProc* %28
}

declare dso_local i64 @MRB_PROC_SCOPE_P(%struct.RProc*) #1

declare dso_local i64 @MRB_PROC_STRICT_P(%struct.RProc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
